State, novas páginas e navegação SPA vs a Tradicional

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "name": "Aluracord - The Boys",
+    "name": "Diapacord - The Boys",
     "theme": {
         "colors": {
             "primary": {
