Chat offline? Aprimorando as habilidades com State

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "name": "Diapacord - The Boys",
+    "name": "CODEC - March 1.2",
     "theme": {
         "colors": {
             "primary": {
@@ -30,9 +30,19 @@
             }
         },
         "color-blue": {
-            "primary": "#40798C"
+            "primary": {
+                "050": "#000a1a",
+                "100": "#001433",
+                "200": "#002966",
+                "300": "#003d99",
+                "400": "#0052cc",
+                "500": "#0066ff",
+                "600": "#3385ff",
+                "700": "#66a3ff",
+                "800": "#99c2ff",
+                "900": "#cce0ff"
+            }
         }
-
     },
 
     "stickers": [
