Integrando com o Supabase.io

--- a/config.json
+++ b/config.json
@@ -27,21 +27,28 @@
                 "800": "#181F25",
                 "900": "#101418",
                 "999": "#080A0C"
+            },
+            "color-blue": {
+                "primary": {
+                    "050": "#000a1a",
+                    "100": "#001433",
+                    "200": "#002966",
+                    "300": "#003d99",
+                    "400": "#0052cc",
+                    "500": "#0066ff",
+                    "600": "#3385ff",
+                    "700": "#66a3ff",
+                    "800": "#99c2ff",
+                    "900": "#cce0ff"
+                }
             }
+
         },
-        "color-blue": {
-            "primary": {
-                "050": "#000a1a",
-                "100": "#001433",
-                "200": "#002966",
-                "300": "#003d99",
-                "400": "#0052cc",
-                "500": "#0066ff",
-                "600": "#3385ff",
-                "700": "#66a3ff",
-                "800": "#99c2ff",
-                "900": "#cce0ff"
-            }
+
+        "transparency": {
+            "fundo": "rgba(0, 0, 0, 0.7)",
+            "buttonRed": "#800000",
+            "buttonBlack": "#1C1C1C"
         }
     },
 
